0.1.0

  * Generic
    * Anonymous connection
  * AtomPub binding
    * Get the content hierarchy using the down relations
    * Get the content of a document
    * Query nodes by ID

0.2.0

  * Generic
    * Support for authentication in the API
  * AtomPub binding
    * Handle all the authentication methods that can be handled by
      libcurl like Basic, NTLM...
    * Decode base64 encoded content sent by SharePoint
    * Set the content of a document
    * Query nodes by path
    * Get the allowable actions for a node
    * Object properties can be updated
    * Query object types