@@ -114,6 +114,8 @@ class AtomTest : public CppUnit::TestFixture
         void getContentStreamTest( );
         void setContentStreamTest( );
         void updatePropertiesTest( );
+        void createFolderTest( );
+        void createFolderBadTypeTest( );
 
         CPPUNIT_TEST_SUITE( AtomTest );
         CPPUNIT_TEST( getRepositoriesTest );
@@ -135,6 +137,8 @@ class AtomTest : public CppUnit::TestFixture
         CPPUNIT_TEST( getContentStreamTest );
         CPPUNIT_TEST( setContentStreamTest );
         CPPUNIT_TEST( updatePropertiesTest );
+        CPPUNIT_TEST( createFolderTest );
+        CPPUNIT_TEST( createFolderBadTypeTest );
         CPPUNIT_TEST_SUITE_END( );
 };
 
@@ -477,6 +481,79 @@ void AtomTest::updatePropertiesTest( )
     it = object->getProperties( ).find( TEST_UPDATED_PROPERTY_NAME );
     CPPUNIT_ASSERT_MESSAGE( "Property to check not found", it != object->getProperties( ).end( ) );
     CPPUNIT_ASSERT_EQUAL_MESSAGE( "Wrong value after refresh", TEST_UPDATED_PROPERTY_VALUE, it->second->getStrings().front( ) );
+}
+
+void AtomTest::createFolderTest( )
+{
+    AtomPubSession session( SERVER_ATOM_URL, SERVER_REPOSITORY, SERVER_USERNAME, SERVER_PASSWORD, false );
+    libcmis::FolderPtr parent = session.getFolder( session.getRootId( ) );
+
+    // Prepare the properties for the new object, object type is cmis:folder
+    map< string, libcmis::PropertyPtr > props;
+    libcmis::ObjectTypePtr type = session.getType( "cmis:folder" );
+    map< string, libcmis::PropertyTypePtr > propTypes = type->getPropertiesTypes( );
+
+    // Set the object name
+    map< string, libcmis::PropertyTypePtr >::iterator it = propTypes.find( string( "cmis:name" ) );
+    CPPUNIT_ASSERT_MESSAGE( "cmis:name property type not found on parent type", it != propTypes.end( ) );
+    vector< string > nameValues;
+    nameValues.push_back( "NEW_NAME_1" );
+    libcmis::PropertyPtr nameProperty( new libcmis::Property( it->second, nameValues ) );
+    props.insert( pair< string, libcmis::PropertyPtr >( string( "cmis:name" ), nameProperty ) );
+   
+    // set the object type 
+    it = propTypes.find( string( "cmis:objectTypeId" ) );
+    CPPUNIT_ASSERT_MESSAGE( "cmis:objectTypeId property type not found on parent type", it != propTypes.end( ) );
+    vector< string > typeValues;
+    typeValues.push_back( "cmis:folder" );
+    libcmis::PropertyPtr typeProperty( new libcmis::Property( it->second, typeValues ) );
+    props.insert( pair< string, libcmis::PropertyPtr >( string( "cmis:objectTypeId" ), typeProperty ) );
+
+    // Actually send the folder creation request
+    libcmis::FolderPtr created = parent->createFolder( props );
+
+    // Check that something came back
+    CPPUNIT_ASSERT_MESSAGE( "Change token shouldn't be empty: object should have been refreshed",
+            !created->getChangeToken( ).empty() );
+}
+
+void AtomTest::createFolderBadTypeTest( )
+{
+    AtomPubSession session( SERVER_ATOM_URL, SERVER_REPOSITORY, SERVER_USERNAME, SERVER_PASSWORD, false );
+    libcmis::FolderPtr parent = session.getFolder( session.getRootId( ) );
+
+    // Prepare the properties for the new object, object type is cmis:document to trigger the exception
+    map< string, libcmis::PropertyPtr > props;
+    libcmis::ObjectTypePtr type = session.getType( "cmis:document" );
+    map< string, libcmis::PropertyTypePtr > propTypes = type->getPropertiesTypes( );
+
+    // Set the object name
+    map< string, libcmis::PropertyTypePtr >::iterator it = propTypes.find( string( "cmis:name" ) );
+    CPPUNIT_ASSERT_MESSAGE( "cmis:name property type not found on parent type", it != propTypes.end( ) );
+    vector< string > nameValues;
+    nameValues.push_back( "NEW_NAME_2" );
+    libcmis::PropertyPtr nameProperty( new libcmis::Property( it->second, nameValues ) );
+    props.insert( pair< string, libcmis::PropertyPtr >( string( "cmis:name" ), nameProperty ) );
+
+    // Set the object type 
+    it = propTypes.find( string( "cmis:objectTypeId" ) );
+    CPPUNIT_ASSERT_MESSAGE( "cmis:objectTypeId property type not found on parent type", it != propTypes.end( ) );
+    vector< string > typeValues;
+    typeValues.push_back( "cmis:document" );
+    libcmis::PropertyPtr typeProperty( new libcmis::Property( it->second, typeValues ) );
+    props.insert( pair< string, libcmis::PropertyPtr >( string( "cmis:objectTypeId" ), typeProperty ) );
+
+    // Actually send the folder creation request
+    try
+    {
+        libcmis::FolderPtr created = parent->createFolder( props );
+        CPPUNIT_FAIL( "Should not succeed to return a folder" );
+    }
+    catch ( libcmis::Exception& e )
+    {
+        CPPUNIT_ASSERT_MESSAGE( "Bad exception message",
+                string( e.what( ) ).find( "Created object is not a folder: " ) != string::npos );
+    }
 }
 
 CPPUNIT_TEST_SUITE_REGISTRATION( AtomTest );
