@@ -20,3 +20,4 @@
     * Get the allowable actions for a node
     * Object properties can be updated
     * Query object types
+    * Creation of folders
